Finished content collections switch, fixed navbar for dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 /* !!! Remove this for tailwind after tutorial */
 html.dark {
-  background-color: black;
+  background-color: #0A0A0A;
   color: #fff;
 }
 
@@ -67,10 +67,16 @@ html.dark {
     padding: 0.5rem;
     margin: 0 1rem;
     border-radius: 3px;
-    border: 0px solid black;
+    border: 0px ;
     background-color: black;
     transition-duration: 150ms;
 
+  }
+  .dark .holder {
+    background-color: white;
+  }
+  .dark .holder a{
+    color: #0A0A0A;
   }
   .nav-links a {
     display: inline-block;
